--- a/src/main/java/edu/ecn/medev2021/PgmGui.form
+++ b/src/main/java/edu/ecn/medev2021/PgmGui.form
@@ -146,6 +146,15 @@
           <text value=""/>
         </properties>
       </component>
+      <component id="3b57e" class="javax.swing.JButton" binding="resizeButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Resize"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
