--- a/src/main/java/edu/ecn/medev2021/PgmGui.form
+++ b/src/main/java/edu/ecn/medev2021/PgmGui.form
@@ -40,7 +40,7 @@
           <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="Generate random + Save"/>
+          <text value="Generate random"/>
         </properties>
       </component>
       <component id="e0816" class="javax.swing.JButton" binding="seuillageButton" default-binding="true">
@@ -153,6 +153,24 @@
         </constraints>
         <properties>
           <text value="Resize"/>
+        </properties>
+      </component>
+      <component id="67e63" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+        <constraints>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Save"/>
+        </properties>
+      </component>
+      <component id="889ad" class="javax.swing.JButton" binding="saveButton1" default-binding="true">
+        <constraints>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Save"/>
         </properties>
       </component>
     </children>
